--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
             <div class="grid grid-cols-3 gap-5">
                 <!--discover section start-->
                 <div class="col-span-3 flex justify-between items-center align-middle bg-white p-5 rounded-md shadow-[0px_4px_6px_rgba(0,0,0,0.1)] ">
-                    <div class="flex items-center">
-                        <img class="w-5 h-5 mr-5" src="assets/checkbox.png" alt="">
-                        <div>
+                    <div class="flex items-center bg-[#F4F7FF] py-5 px-7 rounded-md">
+                        <div class="bg-white rounded-full w-10 h-10 flex flex-col align-middle items-center relative">
+                            <img class="w-5 h-5 mr-5 mx-auto absolute top-[10px] left-[10px]" src="assets/checkbox.png" alt="">
+                        </div>
+                        <div class="ml-3">
                             <p>Task Assigned</p>
                             <span class="font-bold">05</span>
                         </div>
@@ -57,9 +59,11 @@
                         <img src="assets/board.png" alt="">
                         <p>Discover Something New Today!</p>
                     </div>
-                    <div class="flex items-center">
-                        <img class="w-5 h-5 mr-5" src="assets/calender.png" alt="">
-                        <div>
+                    <div class="flex items-center bg-[#F4F7FF] py-5 px-7 rounded-md">
+                        <div class="bg-white rounded-full w-10 h-10 flex flex-col align-middle items-center relative">
+                            <img class="w-5 h-5 mr-5 mx-auto absolute top-[10px] left-[10px]" src="assets/calender.png" alt="">
+                        </div>
+                        <div class="ml-3">
                             <h4>Tue</h4>
                             <p><strong>Feb 25 2025</strong></p>
                         </div>
@@ -69,7 +73,7 @@
                 <!--discover section end-->
                 <!--card section one start-->
                 <div id="" class="shadow-[0px_4px_6px_rgba(0,0,0,0.1)] bg-[#F4F7FF] p-5 rounded-md">
-                    <span>ShopEase</span>
+                    <span class="bg-white py-1 px-3 rounded-md">ShopEase</span>
                     <h3 class="font-bold text-xl my-3 ">Fix Mobile Button Issue</h3>
                     <p class="bg-white py-3 px-4 rounded-md">Debug using Chrome DevTools, check for overlapping...</p>
                     <div class="flex items-center justify-between align-middle mt-5">
@@ -83,9 +87,9 @@
                 <!--card section one end-->
                 <!--card section 2 start-->
                 <div id="" class="shadow-[0px_4px_6px_rgba(0,0,0,0.1)] bg-[#F4F7FF] p-5 rounded-md">
-                    <span>ShopEase</span>
-                    <h3 class="font-bold text-xl my-3 ">Fix Mobile Button Issue</h3>
-                    <p class="bg-white py-3 px-4 rounded-md">Debug using Chrome DevTools, check for overlapping...</p>
+                    <span class="bg-white py-1 px-3 rounded-md">CloudSync</span>
+                    <h3 class="font-bold text-xl my-3 ">Add Dark Mode</h3>
+                    <p class="bg-white py-3 px-4 rounded-md">Store the user's preference in localStorage, update CSS varia...</p>
                     <div class="flex items-center justify-between align-middle mt-5">
                         <div>
                             <p>Deadline:</p>
@@ -97,8 +101,8 @@
                 <!--card section 2 end-->
                 <!--card section 3 start-->
                 <div id="" class="shadow-[0px_4px_6px_rgba(0,0,0,0.1)] bg-[#F4F7FF] p-5 rounded-md">
-                    <span>ShopEase</span>
-                    <h3 class="font-bold text-xl my-3 ">Fix Mobile Button Issue</h3>
+                    <span class="bg-white py-1 px-3 rounded-md">SwiftPay</span>
+                    <h3 class="font-bold text-xl my-3 ">Optimize  Home page </h3>
                     <p class="bg-white py-3 px-4 rounded-md">Debug using Chrome DevTools, check for overlapping...</p>
                     <div class="flex items-center justify-between align-middle mt-5">
                         <div>
@@ -111,8 +115,8 @@
                 <!--card section 3 end-->
                 <!--card section 4 start-->
                 <div id="" class="shadow-[0px_4px_6px_rgba(0,0,0,0.1)] bg-[#F4F7FF] p-5 rounded-md">
-                    <span>ShopEase</span>
-                    <h3 class="font-bold text-xl my-3 ">Fix Mobile Button Issue</h3>
+                    <span class="bg-white py-1 px-3 rounded-md">Meta</span>
+                    <h3 class="font-bold text-xl my-3 ">Add new emoji 🤲</h3>
                     <p class="bg-white py-3 px-4 rounded-md">Debug using Chrome DevTools, check for overlapping...</p>
                     <div class="flex items-center justify-between align-middle mt-5">
                         <div>
@@ -125,8 +129,8 @@
                 <!--card section 4 end-->
                 <!--card section 5 start-->
                 <div id="" class="shadow-[0px_4px_6px_rgba(0,0,0,0.1)] bg-[#F4F7FF] p-5 rounded-md">
-                    <span>ShopEase</span>
-                    <h3 class="font-bold text-xl my-3 ">Fix Mobile Button Issue</h3>
+                    <span class="bg-white py-1 px-3 rounded-md">Google LLC</span>
+                    <h3 class="font-bold text-xl my-3 ">Integrate OpenAI API </h3>
                     <p class="bg-white py-3 px-4 rounded-md">Debug using Chrome DevTools, check for overlapping...</p>
                     <div class="flex items-center justify-between align-middle mt-5">
                         <div>
@@ -139,8 +143,8 @@
                 <!--card section 5 end-->
                 <!--card section 6 start-->
                 <div id="" class="shadow-[0px_4px_6px_rgba(0,0,0,0.1)] bg-[#F4F7FF] p-5 rounded-md">
-                    <span>ShopEase</span>
-                    <h3 class="font-bold text-xl my-3 ">Fix Mobile Button Issue</h3>
+                    <span class="bg-white py-1 px-3 rounded-md">Glassdoar</span>
+                    <h3 class="font-bold text-xl my-3 ">Improve Job searching </h3>
                     <p class="bg-white py-3 px-4 rounded-md">Debug using Chrome DevTools, check for overlapping...</p>
                     <div class="flex items-center justify-between align-middle mt-5">
                         <div>
