added index html and blog html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </div>
                     <div class="flex items-center bg-gradient-to-r from-[#3752FD] via-[#6C7FFA] to-[#9BA8F8] text-white py-3 px-14 rounded-md font-bold">
                         <img src="assets/board.png" alt="">
-                        <p>Discover Something New Today!</p>
+                        <p id="click-move">Discover Something New Today!</p>
                     </div>
                     <div class="flex items-center bg-[#F4F7FF] py-5 px-7 rounded-md">
                         <div class="bg-white rounded-full w-10 h-10 flex flex-col align-middle items-center relative">
