--- a/blog.html
+++ b/blog.html
@@ -71,10 +71,14 @@
     <script>
   document.getElementById("back-move")
     .addEventListener("click", function(){
+        this.style.cursor = "pointer";
         window.location.href = "index.html";
-        
-    })
+    });
 
+    document.getElementById("back-move")
+    .addEventListener("mouseover", function() {
+        this.style.cursor = "pointer";
+    })
     </script>
 </body>
 </html>
