added final content

--- a/blog.html
+++ b/blog.html
@@ -40,14 +40,14 @@
     <!--question 2 start-->
     <div class="bg-white shadow-[0_0_5px_#d2d2d2] rounded-[9px] w-[1500px] mx-auto mt-5 p-3">
         <h1 class="border-b border-dotted border-gray-300 py-2 mb-2">Question-2: What is the difference between innerHTML, innerText, and textContent?</h1>
-        <h3><span class="text-2xl font-bold">Answer: </span>Returns and sets the HTML content inside an element, including tags.</h3>
+        <h3><span class="text-2xl font-bold">Answer: </span>Back and sets the Parrent content inside an element, including tags.</h3>
     </div>
     <!--question 2 end-->
     <!--question 3 start-->
     <div class="bg-white shadow-[0_0_5px_#d2d2d2] rounded-[9px] w-[1500px] mx-auto mt-5 p-3">
         <h1 class="border-b border-dotted border-gray-300 py-2 mb-2">Question-2: What is the difference between innerHTML, innerText, and textContent?</h1>
 
-        <h3><span class="text-2xl font-bold">1: </span>innerHTML when you need to manipulate or get HTML content.  <span class="text-2xl font-bold">02: </span>innerText if you want only the visible text. <span class="text-2xl font-bold">03: </span>textContent to get all text, regardless of visibility.</h3>
+        <h3><span class="text-2xl font-bold">1: </span>innerHTML when you need to manipulate or get HTML content.  <span class="text-2xl font-bold">02: </span>innerText if you want only the inside text. <span class="text-2xl font-bold">03: </span>textContent to get all text, regardless of visibility.</h3>
 
     </div>
     <!--question 3 end-->
