--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style_css/style.css">
 
 </head>
-<body>
+<body class="h-[100vh]">
     <!--Header Section Start Here-->
     <header id="header-section" class="">
         <!--nav flex-->
@@ -30,7 +30,7 @@
                     <span id="number-three" class="font-bold">23</span>
                 </div>
                 <div id="right-logo">
-                    <img src="assets/theme-btn.png" alt="">
+                    <img id="change-color" src="assets/theme-btn.png" alt="">
                 </div>
             </div>
             <!--right logo and check box end-->
@@ -64,7 +64,7 @@
                         <div class="bg-white rounded-full w-10 h-10 flex flex-col align-middle items-center relative">
                             <img class="w-5 h-5 mr-5 mx-auto absolute top-[10px] left-[10px]" src="assets/calender.png" alt="">
                         </div>
-                        <div class="ml-3">
+                        <div id="today-date" class="ml-3">
                             <h4>Tue</h4>
                             <p><strong>Feb 25 2025</strong></p>
                         </div>
